Fixed nav/header
offwhite "guinness" colour added
added padding so no overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,7 @@
       margin-right: 0;
       padding: 0 20px;
       background: white;
+      padding-bottom: 10px;
     }
   }
 /************************* HEADER *************************/
@@ -414,6 +415,7 @@ button {
   height: 80%;
   display: flex;
   flex-direction: row;
+  background: rgb(244, 245, 206);
 }
 
 .header-logo {
@@ -451,7 +453,8 @@ button {
   height: 60%;
   display: flex;
   flex-direction: row;
-  background: white;
+  background: rgb(244, 245, 206);
+  padding-bottom: 10px;
 }
 
 .header-login form {
